
import React from 'React'

import renderer from 'react-test-renderer'
import { ProductImage, ProductCard } from '../../src/components';
import { product2 } from '../data/product';

describe('ProductImage', () => {
    test('debe demostrar el componente correctamente con la imagen personalizado', ()=>{
        const wrapper = renderer.create(
            <ProductImage 
                img="https://holaa8.webnode.es/_files/system_preview_detail_200000018-74223751e5-public/hola.jpg"
            />
        )

        expect(wrapper.toJSON()).toMatchSnapshot();
    });

    test('debe de mostrar el componente con la imagen del producto', () => {
        const wrapper = renderer.create(
            <ProductCard product={ product2 }>
                {
                    ()=>(
                    <ProductImage />
                    )
                }
            </ProductCard>
        )

        expect(wrapper.toJSON()).toMatchSnapshot();
    })
    
})
